--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,10 @@ script:
 - phpunit --debug --verbose --coverage-text --coverage-clover=coverage.clover
     
 after_success:
-- cat WebUI.txt
+- cat LoginPage.txt
+- cat DetailView.txt
+- cat ListView.txt
+- cat EditView.txt
 - bash <(curl -s https://codecov.io/bash) 
 - codecov
 
