--- a/.htaccess
+++ b/.htaccess
@@ -19,8 +19,8 @@ RedirectMatch 403 (?i).*\.log$
 	RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
 </ifModule>
 <IfModule mod_php5.c>
-	php_flag	log_errors					On
-	php_flag	display_errors				On
+	php_flag	log_errors					Off
+	php_flag	display_errors				Off
 	php_value	memory_limit				512M
 	php_flag	output_buffering			On
 	php_flag    zlib.output_compression		Off
