Travis tests - update configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ before_script:
 - sudo mv phpunit.phar /usr/local/bin/phpunit
 - phpunit --version
 - sudo wget https://scrutinizer-ci.com/ocular.phar
+- sudo chmod +x ocular.phar
+- sudo mv ocular.phar /usr/local/bin/ocular
 - mysql -e "SET GLOBAL sql_mode = 'NO_ENGINE_SUBSTITUTION'"
 - mysql -e "create database IF NOT EXISTS yetiforce;" -uroot
 - cp tests/copy/config.inc.php config/config.inc.php
@@ -44,7 +46,7 @@ after_success:
 - cat DetailView.txt
 - cat ListView.txt
 - cat EditView.txt
-- php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+- php ocular code-coverage:upload --format=php-clover coverage.clover
 - bash <(curl -s https://codecov.io/bash) 
 
 branches:
