Fixed cron MultiReference

--- a/cron/MultiReference.service
+++ b/cron/MultiReference.service
@@ -41,7 +41,7 @@ foreach ($rows as &$multireference) {
 			continue;
 		}
 		$query = $targetModel->getRelationQuery();
-		$query->setFields(['id'])
+		$query->setFields(['id']);
 		$dataReader = $query->createCommand()->query();
 		while ($crmid = $dataReader->readColumn(0)) {
 			if (in_array($crmid, $executed)) {
