--- a/.htaccess
+++ b/.htaccess
@@ -51,6 +51,13 @@ RedirectMatch 403 (?i).*\.log$
 	FcgidBusyTimeout 600
 	FcgidIdleTimeout 600
 </IfModule>
+<IfModule mod_fcgid.c>
+	IdleTimeout 600
+	ProcessLifeTime 600
+	IPCConnectTimeout 600
+	IPCCommTimeout 600
+	BusyTimeout 600
+</IfModule>
 ########################
 # <FilesMatch "\.(inc|php|php3|php4|php5|php6|phtml|phps)$">
 # AddHandler x-httpd-php56 .inc .php .php3 .php4 .php5 .php6 .phtml
