--- a/tests/travis.php.ini
+++ b/tests/travis.php.ini
@@ -6,7 +6,7 @@ display_startup_errors = On
 max_execution_time = 600
 default_socket_timeout = 600
 magic_quotes_gpc = 0
-output_buffering = On
+output_buffering = "On"
 post_max_size = 200M
 upload_max_filesize = 200M
 max_input_vars = 10000
