--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ matrix:
     - php: hhvm
     - php: nightly
     
+branches:
+  only:
+    - developer
+   
 services:
   - mysql
   
@@ -41,17 +45,14 @@ script:
 - phpunit --debug --verbose --coverage-text --coverage-clover=coverage.clover
     
 after_script:
+- cd ..
+- cat tests/LoginPage.txt
+- cat tests/DetailView.txt
+- cat tests/ListView.txt
+- cattests/ EditView.txt
+- cat tests/records.log
 - cat cache/logs/phpError.log
 - cat cache/logs/system.log
-- cat LoginPage.txt
-- cat DetailView.txt
-- cat ListView.txt
-- cat EditView.txt
-- cat records.log
 - cat cache/logs/Importer.log
 - php ocular code-coverage:upload --format=php-clover coverage.clover
 - bash <(curl -s https://codecov.io/bash) 
-
-branches:
-  only:
-    - developer
