--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,7 @@
 {
 	"name": "yetiforce/yetiforce-crm",
 	"description": "An open and innovative CRM system.",
-	"keywords": [
-		"YetiForceCRM",
-		"CRM",
-		"open source crm"
-	],
+	"keywords": ["yetiforcecrm", "crm", "open source crm", "best crm"],
 	"license": "YetiForce Public License 1.1",
 	"homepage": "https://yetiforce.com/",
 	"type": "project",
@@ -14,15 +10,27 @@
 		"wiki": "https://yetiforce.com/en/documentation.html",
 		"source": "https://github.com/YetiForceCompany/YetiForceCRM"
 	},
+	"authors": [
+		{
+			"name": "YetiForce team",
+			"email": "info@yetiforce.com",
+			"homepage": "https://yetiforce.com/"
+		}
+	],
 	"require": {
 		"php": ">=5.6.0",
 		"ext-mbstring": "*"
-		
+
+	},
+	"archive": {
+		"exclude": [
+			"tests"
+		]
 	},
 	"autoload": {
 		"psr-0": {
-            "Requests": "vendor/Requests/library/"
-        },
+			"Requests": "vendor/Requests/library/"
+		},
 		"psr-4": {
 			"vtlib\\": "vtlib/Vtiger/",
 			"includes\\": "include/",
