--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,11 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0"
+		"php": ">=5.6.0",
+		"phpmailer/phpmailer": "5.2.*",
+		"rmccue/requests": "1.7",
+		"maximebf/debugbar": "1.10.2",
+		"yiisoft/yii2": "2.0.9"
 	},
 	"require-dev": {
 		"ext-imap": "*",
