--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0"
+		"php": ">=5.6.0",
+		"rmccue/requests": ">=1.7"
 	},
 	"require-dev": {
 		"ext-imap": "*",
@@ -43,9 +44,6 @@
 		]
 	},
 	"autoload": {
-		"psr-0": {
-			"Requests": "vendor/Requests/library/"
-		},
 		"psr-4": {
 			"vtlib\\": "vtlib/Vtiger/",
 			"includes\\": "include/",
