--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ mysql:
   
 before_script:
 - travis_retry composer self-update
-- composer install
+- composer self-update
 - sudo wget https://phar.phpunit.de/phpunit.phar
 - sudo chmod +x phpunit.phar
 - sudo mv phpunit.phar /usr/local/bin/phpunit
