--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"rmccue/requests": ">=1.7",
 		"smarty/smarty": ">=3.1.31",
 		"phpmailer/phpmailer": ">=v5.2.22",
-		"ezyang/htmlpurifier": ">=v4.9.0"
+		"ezyang/htmlpurifier": ">=v4.9.0",
+		"symfony/var-dumper": "v3.2.2"
 	},
 	"require-dev": {
 		"ext-imap": "*",
@@ -53,8 +54,7 @@
 			"App\\": "vendor/yetiforce/",
 			"Api\\": "api/webservice/",
 			"Exception\\": "include/exceptions/",
-			"DebugBar\\": "vendor/php-debugbar/src/DebugBar/",
-			"Symfony\\Component\\VarDumper\\": "vendor/symfony/var-dumper/"
+			"DebugBar\\": "vendor/php-debugbar/src/DebugBar/"
 		}
 	}
 
