--- a/.htaccess
+++ b/.htaccess
@@ -21,13 +21,16 @@ RedirectMatch 403 (?i).*\.log$
 <IfModule mod_php5.c>
 	php_flag	log_errors					On
 	php_flag	display_errors				Off
+	php_value	error_log					cache/logs/phpError.log
 	php_value	memory_limit				512M
 	php_flag	output_buffering			On
 	php_flag    zlib.output_compression		Off
 	php_flag	file_uploads				On
+	php_value   upload_max_filesize			100M
+	php_value   post_max_size				50M
 
 	#php_value	max_execution_time			600
-	#php_value	max_input_time				600
+	php_value	max_input_time				600
 
 	php_value	suhosin.request.max_vars	5000
 	php_value	suhosin.post.max_vars		5000
@@ -43,7 +46,6 @@ RedirectMatch 403 (?i).*\.log$
 	php_value	session.gc_divisor			500
 	php_value	session.gc_probability		1
 	php_value	session.save_path			cache/session
-	php_value	error_log					cache/logs/phpError.log
 </IfModule>
 <IfModule fcgid_module.c>
 	FcgidIOTimeout 600
