--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,6 @@
 	],
 	"require": {
 		"php": ">=5.6.0",
-		"rmccue/requests": ">=1.7",
-		"smarty/smarty": ">=3.1.31",
-		"phpmailer/phpmailer": ">=v5.2.22",
-		"ezyang/htmlpurifier": ">=v4.9.0",
-		"symfony/var-dumper": "v3.2.2"
-	},
-	"require-dev": {
 		"ext-imap": "*",
 		"ext-openssl": "*",
 		"ext-mbstring": "*",
@@ -40,7 +33,12 @@
 		"ext-session": "*",
 		"ext-soap": "*",
 		"ext-zip": "*",
-		"ext-xml": "*"
+		"ext-xml": "*",
+		"rmccue/requests": ">=1.7",
+		"smarty/smarty": ">=3.1.31",
+		"phpmailer/phpmailer": ">=v5.2.22",
+		"ezyang/htmlpurifier": ">=v4.8.0",
+		"symfony/var-dumper": "v3.2.2"
 	},
 	"archive": {
 		"exclude": [
@@ -57,5 +55,4 @@
 			"DebugBar\\": "vendor/php-debugbar/src/DebugBar/"
 		}
 	}
-
 }
