--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ mysql:
   
 before_script:
 - composer install
-- sudo wget https://phar.phpunit.de/phpunit.phar
-- sudo chmod +x phpunit.phar
-- sudo mv phpunit.phar /usr/local/bin/phpunit
+- sudo wget https://phar.phpunit.de/phpunit-5.7.phar
+- sudo chmod +x phpunit-5.7.phar
+- sudo mv phpunit-5.7.phar /usr/local/bin/phpunit
 - phpunit --version
 - sudo wget https://scrutinizer-ci.com/ocular.phar
 - sudo chmod +x ocular.phar
