Hardware info has been removed

--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,12 @@
 		"ext-soap": "*",
 		"ext-zip": "*",
 		"ext-xml": "*",
-		"rmccue/requests": ">=1.7",
-		"smarty/smarty": ">=3.1.31",
-		"phpmailer/phpmailer": ">=v5.2.22",
-		"ezyang/htmlpurifier": ">=v4.8.0",
+		"rmccue/requests": "1.7",
+		"smarty/smarty": "3.1.31",
+		"phpmailer/phpmailer": "v5.2.22",
+		"ezyang/htmlpurifier": "v4.8.0",
 		"symfony/var-dumper": "v3.2.2",
-		"simshaun/recurr": "v2.1",
-		"linfo/linfo": "v3.0.1"
+		"simshaun/recurr": "v2.1"
 	},
 	"archive": {
 		"exclude": [
