--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-/.gitignore
-/.settings
-/.project
-/.buildpath
-/_private
+.gitignore
+.settings
+.project
+.buildpath
+_private
 README.md
-/user_privileges/cron.php
-/cache/templates_c
-/config/csrf_secret.php
-/config/config_override.php
-/cache/logs/*.log
-/cache/vtlib/
-/test/templates_c/basic/*.php
-/nbproject/
-/libraries/mPDF/
-/modules/OSSMail/roundcube/
-/libraries/PHPExcel/
-/libraries/AJAXChat/
-/libraries/gantt/
-/vendor/rmccue/
-/vendor/smarty/
-/vendor/phpmailer/
-/vendor/ezyang/
-/vendor/symfony/
-/vendor/doctrine/
-/vendor/simshaun/
-/vendor/linfo/
+user_privileges/cron.php
+cache/templates_c
+config/csrf_secret.php
+config/config_override.php
+cache/logs/*.log
+cache/vtlib/
+test/templates_c/basic/*.php
+nbproject/
+libraries/mPDF/
+public_html/modules/OSSMail/roundcube/
+libraries/PHPExcel/
+libraries/AJAXChat/
+libraries/gantt/
+vendor/rmccue/
+vendor/smarty/
+vendor/phpmailer/
+vendor/ezyang/
+vendor/symfony/
+vendor/doctrine/
+vendor/simshaun/
+vendor/linfo/
