--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
 			"includes\\": "include/",
 			"App\\": "vendor/yetiforce/",
 			"Api\\": "api/webservice/",
+			"Cron\\": "cron/",
 			"Exception\\": "include/exceptions/",
 			"DebugBar\\": "vendor/php-debugbar/src/DebugBar/"
 		}
