Added minor enhancements

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,7 @@
 RedirectMatch 403 (?i).*\.log$
-
 SetEnv HTACCESS_TEST on
-
 <IfModule mod_autoindex.c>
-	Options -Indexes
+	Options -Indexes -MultiViews
 </ifModule>
 ########################
 <IfModule mod_rewrite.c>
