--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -42,12 +42,63 @@ SetEnv HTACCESS_TEST on
 	#php_flag	session.cookie_secure		On
 	php_flag	session.auto_start			Off
 	# 86400 = 3600*24
-	php_value	session.gc_maxlifetime		86400 
+	php_value	session.gc_maxlifetime		86400
 	# 1440 = 60*24
 	php_value	session.cache_expire		1440
 	php_value	session.gc_divisor			500
 	php_value	session.gc_probability		1
 	php_value	session.save_path			cache/session
+</IfModule>
+<IfModule mod_php7.c>
+	#Error: 337 ,Error + Warning: 5111
+	#php_flag	error_reporting				337
+	php_flag	log_errors					On
+	php_flag	display_errors				Off
+	php_value	error_log					cache/logs/phpError.log
+	php_value	memory_limit				512M
+	php_flag	output_buffering			On
+	php_flag    zlib.output_compression		Off
+	php_flag	file_uploads				On
+	php_value   upload_max_filesize			100M
+	php_value   post_max_size				50M
+
+	#php_value	max_execution_time			600
+	php_value	max_input_time				600
+
+	php_value	suhosin.request.max_vars	5000
+	php_value	suhosin.post.max_vars		5000
+	php_flag	suhosin.session.encrypt		Off
+
+	php_flag	session.cookie_httponly		On
+	#php_flag	session.cookie_secure		On
+	php_flag	session.auto_start			Off
+	# 86400 = 3600*24
+	php_value	session.gc_maxlifetime		86400
+	# 1440 = 60*24
+	php_value	session.cache_expire		1440
+	php_value	session.gc_divisor			500
+	php_value	session.gc_probability		1
+	php_value	session.save_path			cache/session
+</IfModule>
+<IfModule mod_headers.c>
+  <IfModule mod_env.c>
+	Header set X-Frame-Options "SAMEORIGIN"
+	Header set X-XSS-Protection "1; mode=block"
+    Header set X-Content-Type-Options "nosniff"
+	Header set Referrer-Policy "no-referrer"
+	Header set Strict-Transport-Security "max-age=15768000; includeSubDomains"
+    Header set X-Robots-Tag "none"
+    Header set X-Permitted-Cross-Domain-Policies "none"
+	Header unset Server
+	Header unset X-Powered-By
+    SetEnv modHeadersAvailable true
+  </IfModule>
+</IfModule>
+<ifModule ModSecurity.c>
+  SecServerSignature ''
+</ifModule>
+<IfModule mod_dir.c>
+  DirectoryIndex index.php
 </IfModule>
 ########################
 # <FilesMatch "\.(inc|php|php3|php4|php5|php6|phtml|phps)$">
