--- a/.htaccess
+++ b/.htaccess
@@ -86,7 +86,7 @@ SetEnv HTACCESS_TEST on
 	Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
 	Header set Referrer-Policy "no-referrer"
-	Header set Strict-Transport-Security "max-age=15768000; includeSubDomains"
+	Header set Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"
     Header set X-Robots-Tag "none"
     Header set X-Permitted-Cross-Domain-Policies "none"
 	Header unset Server
