--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,12 @@
 		"ext-zip": "*",
 		"ext-xml": "*",
 		"sabre/dav": "3.1.3",
-		"rmccue/requests": "1.7",
+		"rmccue/requests": "v1.7.0",
 		"smarty/smarty": "3.1.31",
 		"phpmailer/phpmailer": "v5.2.24",
 		"ezyang/htmlpurifier": "v4.9.3",
 		"symfony/var-dumper": "v3.3.5",
+		"doctrine/collections": "v1.4.0",
 		"simshaun/recurr": "v3.0.1",
 		"sensiolabs/security-checker": "v4.0.4"
 	},
