--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,31 @@
-.gitignore
-.settings
-.project
-.buildpath
-_private
-README.md
-user_privileges/cron.php
-cache/templates_c
-config/csrf_secret.php
-config/config_override.php
-cache/logs/*.log
-cache/vtlib/
-test/templates_c/basic/*.php
-libraries/mPDF/
-public_html/modules/OSSMail/roundcube/
-public_html/libraries/gantt/
-libraries/PHPExcel/
-vendor/rmccue/
-vendor/smarty/
-vendor/phpmailer/
-vendor/ezyang/
-vendor/symfony/
-vendor/doctrine/
-vendor/simshaun/
-vendor/sabre/
-vendor/ircmaxell/
-vendor/bin/
-vendor/paragonie/
-vendor/psr/
-vendor/sensiolabs/
-vendor/composer/ca-bundle/
+/.gitignore
+/.settings
+/.project
+/.buildpath
+/_private
+/README.md
+/user_privileges/cron.php
+/cache/templates_c
+/config/csrf_secret.php
+/config/config_override.php
+/cache/logs/*.log
+/cache/vtlib/
+/test/templates_c/basic/*.php
+/libraries/mPDF/
+/public_html/modules/OSSMail/roundcube/
+/public_html/libraries/gantt/
+/libraries/PHPExcel/
+/vendor/rmccue/
+/vendor/smarty/
+/vendor/phpmailer/
+/vendor/ezyang/
+/vendor/symfony/
+/vendor/doctrine/
+/vendor/simshaun/
+/vendor/sabre/
+/vendor/ircmaxell/
+/vendor/bin/
+/vendor/paragonie/
+/vendor/psr/
+/vendor/sensiolabs/
+/vendor/composer/ca-bundle/
