--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,9 @@ after_script:
 - cat tests/LoginPage.txt
 - cat tests/DetailView.txt
 - cat tests/EditView.txt
+- cat tests/ListView.txt
 - cat tests/records.log
+- cat cache/logs/errors.log
 - cat cache/logs/request.log
 - cat cache/logs/phpError.log
 - cat cache/logs/system.log
