--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /public_html/layouts/resources/fonts/*.ttf
 
 /layouts/basic/modules/Settings/TestData
-
+/languages/pl-PL
 /modules/TestData
 /modules/Settings/TestData
 
