Update composer and yarn

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
     "guzzlehttp/guzzle": "^6.3.3",
     "yetiforce/csrf-magic": "^v1.0.8",
     "yetiforce/debugbar": "^1.13.1.1",
-    "yetiforce/yii2": "^2.0.15.2",
+    "yetiforce/yii2": "2.0.15.3",
     "yetiforce/icalendar": "^1.0.2",
     "yetiforce/yetiforcepdf": "^0.1.3"
   },
