Added minor improvements

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
     "ext-soap": "*",
     "ext-zip": "*",
     "ext-xml": "*",
+    "composer/ca-bundle": "^1.1",
     "sabre/dav": "3.2.2",
     "rmccue/requests": "v1.7.0",
     "smarty/smarty": "^v3.1.33",
