--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,3 +2,6 @@ export_languages: ["en-US"]
 files:
   - source: /languages/en-US/**/*.json
     translation: /languages/%locale%/**/%original_file_name%
+    languages_mapping:
+    locale:
+      ru: ro-RO
