--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,17 @@
 /user_privileges/user_privileges_6.php
 /user_privileges/user_privileges_7.php
 
+/config/*
+!/config/username_blacklist.php
+!/config/csrf_config.php
+!/config/mimetypes.php
+!/config/ConfigTemplates.php
+!/config/version.php
+!/config/Security.php
+!/config/Performance.php
+!/config/Debug.php
+!/config/Components/ConfigTemplates.php
+
 # dependencies COMPOSER
 /vendor
 /public_html/vendor/*
