--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ jobs:
         - ./tests/setup/selenium.sh
       script:
         - cd tests
-        - ../vendor/bin/phpunit --verbose --log-junit 'tests/execution.xml' --coverage-clover 'tests/coverage.xml'
+        - ../vendor/bin/phpunit --verbose --log-junit 'tests/execution.xml' --coverage-clover 'tests/coverage.xml' --debug
         - sudo ls -all
         - cd ..
         - if [ "$TRAVIS_SECURE_ENV_VARS" = true ]; then sonar-scanner; fi
