--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,7 @@
-export_languages: ["en-US"]
+export_languages:
+  - en-US
 files:
-  - source: /languages/en-US/**/*.json
+  - &ref_languages_mapping
+    source: /languages/en-US/**/*.json
     translation: /languages/%locale%/**/%original_file_name%
-    languages_mapping:
-    locale:
-      ru: ro-RO
+    languages_mapping: 
