--- a/public_html/package.json
+++ b/public_html/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.0",
+    "babel-plugin-webpack-chunkname": "^1.2.0",
     "quasar": "^1.0.0-beta.0",
     "vue-i18n": "^7.3.3"
   },
