--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0-beta.7",
-    "strip-ansi": "=3.0.1"
+    "strip-ansi": "=3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/eslint-config-prettier": "^3.0.0"
   },
   "engines": {
     "node": ">= 8.9.0",
