--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@
 yarn-error.log
 /node_modules/
 /public_html/libraries/*
+/public_html/node_modules/
 
 # IDEs and editors
 /.buildpath
@@ -65,3 +66,25 @@ yarn-error.log
 *.sublime-workspace
 .babelrc
 .sonarlint/
+
+# QUASAR
+.quasar
+.DS_Store
+.thumbs.db
+node_modules
+/public_html/dist
+/src-cordova/node_modules
+/src-cordova/platforms
+/src-cordova/plugins
+/src-cordova/www
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
