--- a/package.json
+++ b/package.json
@@ -19,67 +19,31 @@
   "author": "YetiForceCompany <info@yetiforce.com> (https://yetiforce.com)",
   "license": "YetiForce Public License v3",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "add": "^2.0.6",
-    "animate.css": "^3.7",
-    "block-ui": "^2.70.1",
-    "blueimp-file-upload": "^9.25.1",
-    "bootbox": "^4.4.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-colorpicker": "^3.0.3",
-    "bootstrap-datepicker": "^1.7.1",
-    "bootstrap-daterangepicker": "^3.0.3",
-    "bootstrap-tabdrop": "https://github.com/jmschabdach/bootstrap-tabdrop",
-    "chart.js": "^2.7.2",
-    "chartjs-plugin-datalabels": "^0.5.0",
-    "chartjs-plugin-funnel": "^1.1.2",
-    "clipboard": ">=2.0.0",
-    "clockpicker": "https://github.com/YetiForceCompany/clockpicker#master",
-    "css-element-queries": "^1.0.5",
-    "datatables.net": "^1.10.19",
-    "datatables.net-bs4": "^1.10.19",
-    "datatables.net-responsive-bs4": "^2.2.3",
-    "device-uuid": "^1.0.4",
-    "dompurify": "^1.0.10",
-    "emojipanel": "https://github.com/YetiForceCompany/EmojiPanel#master",
-    "flag-icon-css": "^3.3.0",
-    "floatthead": "^2.1.3",
-    "fontawesome-web": "^5.0.2",
-    "footable": "^2.0.6",
-    "fullcalendar": "3.10.0",
-    "gantt-elastic": "^0.9.2",
-    "gridstack": "^0.4.0",
-    "html2canvas": "^1.0.0-alpha.12",
-    "html5shiv": "^3.7.3",
-    "inputmask": "^4.0",
-    "jQuery-Validation-Engine": "https://github.com/YetiForceCompany/jQuery-Validation-Engine#master",
-    "jquery": ">3.0.0",
-    "jquery-hoverintent": "^1.9.0",
-    "jquery-lazy": "^1.7.7",
-    "jquery-outside-events": "^1.0.0",
-    "jquery-slimscroll": "^1.3.8",
-    "jquery-ui-dist": "^1.12.1",
-    "jquery-ui-touch-punch": "^0.2.3",
-    "jquery.class.js": "^1.0.0",
-    "jstree": "^3.3.7",
-    "jstree-bootstrap-theme": "^1.0.1",
-    "leaflet": "^1.3.3",
-    "leaflet.awesome-markers": "^2.0.5",
-    "leaflet.markercluster": "^1.4.1",
-    "moment": "^2.23.0",
-    "mousetrap": "^1.6.1",
-    "perfect-scrollbar": "^1.3.0",
-    "pnotify": "4.0.0-beta.2",
-    "popper.js": "^1.14.4",
-    "respond.js": "^1.4.2",
-    "sass-material-colors": "^0.0.5",
-    "select2": "^4.0.6-rc.1",
-    "select2-theme-bootstrap4": "^0.2.0-beta.2",
-    "split.js": "^1.5.10",
-    "store": "^2.0.12",
-    "tributejs": "^3.4.0"
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.18.0",
+    "quasar": "^1.0.0-beta.4",
+    "vue-i18n": "^7.3.3"
   },
-  "resolutions": {},
+  "devDependencies": {
+    "@quasar/app": "^1.0.0-beta.8",
+    "strip-ansi": "=3.0.1",
+    "babel-plugin-webpack-chunkname": "^1.2.0",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/eslint-config-prettier": "^3.0.0"
+  },
+  "engines": {
+    "node": ">= 8.9.0",
+    "npm": ">= 5.6.0",
+    "yarn": ">= 1.6.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
+  "resolutions": {
+    "ajv": "6.8.1"
+  },
   "bugs": {
     "url": "https://github.com/YetiForceCompany/YetiForceCRM/issues"
   },
