--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.0",
+    "device-uuid": "^1.0.4",
     "dot-prop": "^4.2.0",
     "quasar": "^1.0.0-beta.4",
     "vue-i18n": "^7.3.3"
