--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
   "require-dev": {
     "facebook/webdriver": "^1.6.0",
     "phpunit/phpunit": "7.*",
-    "seld/jsonlint": "*"
+    "seld/jsonlint": "*",
+    "php-console/php-console": "^3.1"
   },
   "suggest": {
     "ext-apcu": "Cache meta data in apcu to improve system performance",
