--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0-beta.8",
-    "strip-ansi": "=3.0.1",
-    "babel-plugin-webpack-chunkname": "^1.2.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/eslint-config-prettier": "^3.0.0"
+    "@vue/eslint-config-prettier": "^3.0.0",
+    "babel-plugin-webpack-chunkname": "^1.2.0",
+    "esm": "^3.2.15",
+    "prettier": "^1.16.4",
+    "serialize-javascript": "^1.6.1",
+    "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
