--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /cache/*/*/*
 !/cache/*/index.html
 !/cache/*/*/index.html
+/cache/registration.php
 
 /config/config_override.php
 /config/csrf_secret.php
