--- a/public_html/package.json
+++ b/public_html/package.json
@@ -21,11 +21,11 @@
     "@mdi/font": "^3.5.95",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
-    "babel-preset-env": "^1.7.0",
     "device-uuid": "^1.0.4",
     "dot-prop-wild": "^0.3.0",
     "quasar": "^1.0.0-beta.13",
     "set-nested-prop": "^2.0.0",
+    "stylus": "^0.54.5",
     "vue": "^2.6.10",
     "vue-i18n": "^7.3.3",
     "vue-router": "^3.0.2",
@@ -38,12 +38,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.2",
     "@vue/babel-preset-app": "^3.5.1",
     "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/component-compiler": "^3.6.0",
     "@vue/eslint-config-prettier": "^3.0.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-vue-app": "^2.0.0",
     "browser-sync": "^2.26.3",
     "esm": "^3.2.20",
     "express": "^4.16.4",
@@ -51,7 +52,6 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-serve": "^1.4.0",
-    "gulp-vue-compiler": "^1.0.0-beta.0",
     "module-alias": "^2.2.0",
     "prettier": "^1.16.4",
     "strip-ansi": "=3.0.1",
