--- a/public_html/package.json
+++ b/public_html/package.json
@@ -50,8 +50,12 @@
     "express": "^4.16.4",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
+    "gulp-append-prepend": "^1.0.6",
     "gulp-babel": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-serve": "^1.4.0",
+    "gulp-terser": "^1.1.7",
     "module-alias": "^2.2.0",
     "prettier": "^1.16.4",
     "strip-ansi": "=3.0.1",
