vue source maps

--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,8 @@ yarn-error.log
 /public_html/.env
 /public_html/**/*.vue.js
 /public_html/**/*.min.js
+*.vue.js
+*.min.js
+*/*.vue.js
+*/*.min.js
 /public_html/node_modules
