--- a/public_html/package.json
+++ b/public_html/package.json
@@ -47,16 +47,17 @@
     "dotenv": "^7.0.0",
     "esm": "^3.2.20",
     "express": "^4.16.4",
+    "extend": "^3.0.2",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
     "gulp-serve": "^1.4.0",
     "gulp-stylus": "^2.7.0",
-    "gulp-terser": "^1.1.7",
     "module-alias": "^2.2.0",
     "prettier": "^1.16.4",
     "strip-ansi": "=3.0.1",
+    "terser": "^3.17.0",
     "vue-template-compiler": "^2.6.10"
   },
   "engines": {
