--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "repository": "git+https://github.com/YetiForceCompany/YetiForceCRM.git",
   "author": "YetiForceCompany <info@yetiforce.com> (https://yetiforce.com)",
   "license": "YetiForce Public License v3",
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "dev": "cd ./public_html && gulp dev",
     "build": "cd ./public_html && gulp build"
   },
   "devDependencies": {
+    "gulp-header": "^2.0.7"
   },
   "browserslist": [
     "> 1%",
