--- a/public_html/package.json
+++ b/public_html/package.json
@@ -51,6 +51,7 @@
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.6",
+    "gulp-header": "^2.0.7",
     "gulp-rename": "^1.4.0",
     "gulp-serve": "^1.4.0",
     "gulp-stylus": "^2.7.0",
