jsconfig paths updated

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./public_html",
     "paths": {
       "src/*": ["./src/*"],
       "store/*": ["./src/store/*"],
