--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
     "yetiforce/debugbar": "^1.13.1.1",
     "yetiforce/yii2": "2.0.15.3",
     "yetiforce/yetiforcepdf": "0.1.20",
-    "abraham/twitteroauth": "^1.0"
+    "abraham/twitteroauth": "^1.0",
+    "matyhtf/swoole_framework": "^v2.0.0"
   },
   "require-dev": {
     "facebook/webdriver": "^1.6.0",
