--- a/public_html/package.json
+++ b/public_html/package.json
@@ -27,10 +27,10 @@
     "set-nested-prop": "^2.0.0",
     "stylus": "^0.54.5",
     "vue": "^2.6.10",
+    "vue-drag-drop": "^1.1.4",
     "vue-i18n": "^7.3.3",
     "vue-plugin-load-script": "^1.2.0",
     "vue-router": "^3.0.2",
-    "vuedraggable": "^2.20.0",
     "vuex": "^3.1.0"
   },
   "scripts": {
