--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,8 @@ root = true
 [*]
 charset = utf-8
 indent_style = tab
-indent_size = 4
+indent_size = 2
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 120
