--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,5 @@
 {
+	"extends": ["config:base"],
 	"rangeStrategy": "update-lockfile",
 	"lockFileMaintenance": ["mariuszkrzaczkowski", "rskrzypczak", "TomaszQr"],
 	"packageRules": [
