Cleaned code, imporeved quasar loading

--- a/public_html/src/package.json
+++ b/public_html/src/package.json
@@ -4,6 +4,7 @@
     "build": "node build.js"
   },
   "dependencies": {
+    "quasar": "^1.0.0-beta.23",
     "vue": "^2.6.10"
   },
   "devDependencies": {
