--- a/public_html/src/package.json
+++ b/public_html/src/package.json
@@ -4,18 +4,28 @@
     "build": "node build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "quasar": "^1.0.0-beta.23",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-prettier": "^4.0.1",
+    "babel-core": "^6.26.3",
+    "babel-minify": "^0.4.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.4.3",
     "css-loader": "^1.0.1",
     "eslint": "^5.16.0",
     "findit": "^2.0.0",
     "rollup": "^0.62.0",
     "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^4.2.4",
