Server configuration update

--- a/tests/setup/crons.conf
+++ b/tests/setup/crons.conf
@@ -1,1 +1,3 @@
-*/2 * * * * www-data /var/www/html/cron/cron.sh > /var/www/html/cache/logs/cron.log 2>&1
+# Cron
+*/2 * * * * yfprod /home/yfprod/html/cron/cron.sh > /home/yfprod/html/cache/logs/cron.log 2>&1
+#*/2 * * * * yftest /home/yftest/html/cron/cron.sh > /home/yftest/html/cache/logs/cron.log 2>&1
