--- a/tests/setup/nginx/docker.conf
+++ b/tests/setup/nginx/docker.conf
@@ -2,46 +2,20 @@
 #  Best configuration for YetiForceCRM       #
 #  Created by m.krzaczkowski@yetiforce.com   #
 ##############################################
-
 # HTTP
 server {
-	listen 80;
-	server_name crm.example.com;
-	root /home/yfprod/html/public_html;
+	listen 80 default_server;
+	server_name localhost;
+	root /var/www/html/public_html;
 	index index.php index.html;
+    #return 301 https://$server_name$request_uri;
 
-	if ($host != $server_name) {
-		return 444;
-	}
-
-	## Logs
-	error_log /var/log/nginx/yfprod_http_error.log;
-	#access_log /var/log/nginx/yfprod_http_access.log;
-	access_log off;
-
-	return 301 https://$server_name$request_uri;
-}
-# HTTPS
-server {
-    listen 443 http2;
-	ssl on;
-	ssl_certificate /etc/nginx/ssl/_example.com.pem;
-	ssl_certificate_key /etc/nginx/ssl/_example.com.key;
-	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-	ssl_protocols  TLSv1.2 TLSv1.3;
-
-	server_name crm.example.com;
-	root /home/yfprod/html/public_html;
-    index index.php index.html;
-
-	if ($host != $server_name) {
-		return 444;
-	}
+	## Configuration for YetiForceCRM
+    include /etc/nginx/yetiforce.conf;
 
 	## Logs
-	error_log /var/log/nginx/yfprod_https_error.log;
-	#access_log /var/log/nginx/yfprod_https_access.log;
-	access_log off;
+	error_log /var/log/nginx/localhost_error.log;
+	access_log /var/log/nginx/localhost_access.log;
 
 	##########################
 	##       SabreDAV       ##
@@ -81,7 +55,4 @@ server {
 		proxy_send_timeout 600;
 		proxy_read_timeout 600;
 	}
-
-	## Configuration for YetiForceCRM
-	include /etc/nginx/yetiforce.conf;
 }
