--- a/tests/setup/nginx/docker.conf
+++ b/tests/setup/nginx/docker.conf
@@ -27,7 +27,7 @@ server {
 		try_files $fastcgi_script_name = 404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(.*)$;
-		fastcgi_pass unix:/run/php/yfprod.sock;
+		fastcgi_pass unix:/run/php/php-fpm.sock;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param PATH_INFO        $fastcgi_path_info;
 		fastcgi_send_timeout 600;
@@ -45,7 +45,7 @@ server {
 		try_files $uri =404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass unix:/run/php/yfprod.sock;
+		fastcgi_pass unix:/run/php/php-fpm.sock;
 		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
