--- a/tests/setup/apache/.htaccess
+++ b/tests/setup/apache/.htaccess
@@ -7,7 +7,6 @@ Header unset X-Permitted-Cross-Domain-Policies
 Header unset Referrer-Policy
 Header unset Expect-CT
 Header unset X-Robots-Tag
-Header unset Cache-Control
 Header unset Server
 Header unset X-Powered-By
 
@@ -20,9 +19,9 @@ Header always set Referrer-Policy "no-referrer"
 Header always set Expect-CT 'enforce; max-age=3600
 Header always set X-Robots-Tag none
 
-Header always set Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0"
+Header setifempty Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0"
 <FilesMatch "\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt|ttf|woff2)$">
-Header always set Cache-Control "max-age=86400, public"
+Header setifempty Cache-Control "max-age=86400, public"
 </FilesMatch>
 
 </ifModule>
