--- a/tests/setup/apache/httpd-vhosts.conf
+++ b/tests/setup/apache/httpd-vhosts.conf
@@ -17,7 +17,6 @@
 			Header unset Referrer-Policy
 			Header unset Expect-CT
 			Header unset X-Robots-Tag
-			Header unset Cache-Control
 			Header unset Server
 			Header unset X-Powered-By
 			Header unset Access-Control-Allow-Origin
@@ -32,15 +31,15 @@
 			Header always set X-Robots-Tag none
 			Header always set Access-Control-Allow-Origin: *
 
-			Header always set Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0"
+			Header setifempty Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0"
 			<FilesMatch "\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt|ttf|woff2)$">
-				Header always set Cache-Control "max-age=86400, public"
+				Header setifempty Cache-Control "max-age=86400, public"
 			</FilesMatch>
 
 		</ifModule>
-		
+
 		AddDefaultCharset UTF-8
-		
+
 		<ifModule ModSecurity.c>
 			SecServerSignature ''
 		</ifModule>
